--- a/.gitignore
+++ b/.gitignore
@@ -206,9 +206,7 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Tauron ML outputs
+# Tauron ML outputs (generated — do not commit)
 data/
 models/
 *.pt
-api.py
-tauron_pipeline.py
