--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,8 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.12.5
+aiofiles==23.2.1      # required by StaticFiles for async file serving
+python-multipart==0.0.9  # required for multipart/form-data (CSV upload)
 
 # HTTP client — for Ollama REST API calls
 httpx==0.27.0
