--- a/.gitignore
+++ b/.gitignore
@@ -209,5 +209,7 @@ __marimo__/
 
 # Tauron ML outputs (generated — do not commit)
 data/
-models/
-*.pt
+
+# Allow model weights (475KB, safe for GitHub)
+!models/tauron_model.pt
+!backend/models/tauron_model.pt
